force-app/main/default/objects/FEC_Case_Assignment__c/FEC_Case_Assignment__c.object-meta.xml
<CustomObject>
    <description>Rule header for automatic Service Case assignment</description>
    <label>Case Assignment</label>
    <nameField>
        <label>Case Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>