force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment_Method__c</fullName>
    <defaultValue>&quot;Continuous&quot;</defaultValue>
    <label>Assignment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuous</fullName>
                <default>true</default>
                <label>Continuous</label>
            </value>
            <value>
                <fullName>Time-Based</fullName>
            </value>
            <value>
                <fullName>Continous</fullName>
                <isActive>false</isActive>
                <label>Continous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>