force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>FEC_CaseAssignmentBusinessHours</relationshipName>
    <type>Lookup</type>
</CustomField>