force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Case_Assignmetn_NOC_Count__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Assignmetn_NOC_Count__c</fullName>
    <description>Tổng số Case Assignmetn NOC liên quan</description>
    <label>Case Assignmetn NOC Count</label>
    <summaryForeignKey>FEC_Case_Assignment_NOC__c.FEC_Case_Assignment_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>