force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_Role__c</fullName>
    <description>Role configuration for assignment. Use semicolon-separated role names.</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>