force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Running_Times__c.field-meta.xml
<CustomField>
    <fullName>FEC_Running_Times__c</fullName>
    <label>Running Times</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>