force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Scale__c.field-meta.xml
<CustomField>
    <fullName>FEC_Scale__c</fullName>
    <label>Scale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>