force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Scheduled_Time__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Minutes between auto assignment runs in Continuous mode.</description>
    <label>Scheduled Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>