force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Select_Queues__c.field-meta.xml
<CustomField>
    <fullName>FEC_Select_Queues__c</fullName>
    <description>Queues used by this assignment rule. Store queue names separated by semicolon.</description>
    <label>Select Queues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>