force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Achieved</fullName>
                <isActive>false</isActive>
                <label>Achieved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>