force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Time_Slots__c.field-meta.xml
<CustomField>
    <fullName>FEC_Time_Slots__c</fullName>
    <description>Selected execution slots for Time-Based mode.</description>
    <label>Time Slots</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>08:30</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>09:30</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>15:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>16:30</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>17:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>