force-app/main/default/objects/FEC_Case_Assignment__c/fields/FEC_Time_Slots_Tracked__c.field-meta.xml
<CustomField>
    <fullName>FEC_Time_Slots_Tracked__c</fullName>
    <description>Mirror of Time Slots for field history (multiselect picklist does not store Old/New values).</description>
    <label>Time Slots</label>
    <length>255</length>
    <type>Text</type>
</CustomField>