force-app/main/default/objects/FEC_Case_Assignment__c/validationRules/FEC_QueuesAndRole_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_QueuesAndRole_Required</fullName>
    <active>true</active>
    <description>Require queue and role information for assignment rule.</description>
    <errorConditionFormula>OR(
ISBLANK(FEC_Select_Queues__c),
ISBLANK(FEC_Role__c)
)</errorConditionFormula>
    <errorMessage>Review the errors on this page: Select Queues/Role can’t be blank.</errorMessage>
</ValidationRule>