force-app/main/default/objects/FEC_Case_Assignment__c/validationRules/FEC_Scale_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_Scale_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Scale must be at least 1 when provided.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(FEC_Scale__c)),
FEC_Scale__c &lt; 1
)</errorConditionFormula>
    <errorMessage>Scale must be greater than or equal to 1.</errorMessage>
</ValidationRule>