force-app/main/default/objects/FEC_Case_Assignment__c/validationRules/FEC_ScheduledTime_Req_When_Continuous.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_ScheduledTime_Req_When_Continuous</fullName>
    <active>true</active>
    <description>Require Scheduled Time when Assignment Method is Continuous.</description>
    <errorConditionFormula>AND(
            ISPICKVAL(FEC_Assignment_Method__c, &quot;Continuous&quot;),
            ISBLANK(FEC_Scheduled_Time__c)
        )</errorConditionFormula>
    <errorDisplayField>FEC_Scheduled_Time__c</errorDisplayField>
    <errorMessage>Scheduled Time is required when Assignment Method is Continuous.</errorMessage>
</ValidationRule>