force-app/main/default/objects/FEC_Case_Assignment__c/validationRules/FEC_TimeSlots_Required_When_TimeBased.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_TimeSlots_Required_When_TimeBased</fullName>
    <active>true</active>
    <description>Require Time Slots when Assignment Method is Time-Based.</description>
    <errorConditionFormula>AND(
            ISPICKVAL(FEC_Assignment_Method__c, &quot;Time-Based&quot;),
            ISBLANK(FEC_Time_Slots__c)
        )</errorConditionFormula>
    <errorDisplayField>FEC_Time_Slots__c</errorDisplayField>
    <errorMessage>Time Slots are required when Assignment Method is Time-Based.</errorMessage>
</ValidationRule>